changes added to branch

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Ajit-Shetty/Learning.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ajit Shetty changed to check branch status",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Ajit-Shetty/Learning/issues"
